--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,56 @@
 -e .
 
 # external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+import os
+import pandas as pd
+import numpy as np
+import matplotlib.pyplot as plt
+import matplotlib.image as mpimg
+import seaborn as sns
+from sklearn.utils import resample
+import random
+import cv2 as cv
+from sklearn import preprocessing
+from sklearn.decomposition import PCA
+from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA
+import math
+from sklearn.cluster import MiniBatchKMeans
+from skimage.feature import hog
+from skimage import exposure
+from numpy import interp
+
+from sklearn.dummy import DummyClassifier
+from sklearn.metrics import precision_score, recall_score, f1_score, accuracy_score, classification_report, roc_curve, auc, confusion_matrix
+from sklearn.model_selection import train_test_split GridSearchCV, learning_curve, validation_curve, StratifiedKFold
+from sklearn.pipeline import make_pipeline
+from sklearn.preprocessing import MinMaxScaler
+from sklearn.svm import SVC, LinearSVC
+from sklearn.neighbors import KNeighborsClassifier as KNN
+from sklearn.model_selection import cross_val_score
+from sklearn.metrics import ConfusionMatrixDisplay
+
+
+%matplotlib inline
+
+
+
+from skimage.transform import resize
+from skimage.io import imread
+from glob import glob
+from scipy import ndimage as ndi
+from sklearn.utils import shuffle
+from sklearn.linear_model import SGDClassifier
+from sklearn.model_selection import RandomizedSearchCV
+from tensorflow.keras.utils import to_categorical
+from imblearn.under_sampling import RandomUnderSampler, TomekLinks
+from imblearn.over_sampling import RandomOverSampler, SMOTE
+from collections import Counter
+from sklearn.ensemble import RandomForestClassifier
+from yellowbrick.model_selection import learning_curve
+from yellowbrick.model_selection import ValidationCurve
+#Metrics
+
+import tensorflow as tf
+from tensorflow.keras.preprocessing.image import ImageDataGenerator
+from tensorflow.keras.optimizers import RMSprop
+from tensorflow.keras import regularizers
